# sigma-mitre

./: README.md  pyproject.toml  reference.json  sigma-mitre.py  sigma_heatmap.json
